# flex-bison-embedded

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Flex_test/flex-bison-poc/: flex-bison-poc.sln
Flex_test/flex-bison-poc/Mem_Test/: Mem_Test.c  Mem_Test.vcxproj  Mem_Test.vcxproj.filters
Flex_test/flex-bison-poc/flex-bison-poc/: flex-bison-poc.vcxproj  flex-bison-poc.vcxproj.filters  memory_management.c
proof_of_concept/: CMakeLists.txt
proof_of_concept/flex-bison-poc/: CMakeLists.txt
proof_of_concept/flex-bison-poc/memory_test/: CMakeLists.txt  Mem_Test.c
proof_of_concept/flex_bison_poc/: CMakeLists.txt  lex.yy.c
proof_of_concept/memory_management/: CMakeLists.txt
